--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,6 +45,8 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
+2020-03-31: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-29: Please find the <FONT color="#800080">Assignment for Week 3</FONT> from below.<br>
 2020-03-24: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
@@ -76,55 +78,7 @@ Exercises in p.27 #3, 4<br>
 Exercises in p.31 #2, 3<br>
 Exercises in p.33 #2, 3<br>
 Exercises in p.34 #1, 2<br><br>
-<!--
-13 problems. Due Date: September 18th.<br>
-Exercise 1.1. in p.8 #2 <br>
-Exercise 1.2. in p.13 #3, 5, 6, 8, 13<br>
-Exercise 1.3. in p.15 #1, 2, 3, 7, 8<br>
-Exercise 1.4. in p.20 #1, 2<br><br>
 
-<b>Homework  #2</b> 10 problems. Due Date: September 25th.<br>
-Exercise 1.5. in p.22 #1, 3<br>
-Exercise 1.7. in p.30 #2, 5, 8<br>
-A Quiz on Chap. 1 in p.34 #2, 3, 4, 5, 7<br><br>
-
-<b>Homework  #3</b> 10 problems. Due Date: October 2nd.<br>
-Exercise 2.1. in p.45 #1, 2a, 2c, 3<br>
-Exercise 2.2. in p.48 #4, 5c, 5d, 6<br>
-Exercise 2.3. in p.51 #1, 3<br><br>
-
-<b>Homework  #4</b> 2 problems. Due Date: October 8th.<br>
-Exercise 2.4. in p.55 #1, 3<br><br>
-
-<b>Homework  #5</b> 7 problems. Due Date: October 15th.<br>
-Exercise 2.5. in p.61 #1, 2<br>
-Exercise 3.1. in p.68 #1, 2, 3, <a href="f2019_geom2/hw5.pdf" title="HW5 additional problems">additional problems</a><br><br>
-
-<b>Homework  #6</b> 9 problems. Due Date: October 22nd.<br>
-Exercise 3.2. in p.71 #2<br>
-Exercise 3.3. in p.73 #3<br>
-Exercise 3.4. in p.75 #1, 2. Also prove Corollaries 1 and 2 on the same page.<br>
-Exercise 3.5. in p.78 #1, 3, 4.<br><br>
-
-<b>Homework  #7</b> 6 problems. Due Date: October 28th.<br>
-Exercise 3.6. in p.85 #1, 2, 4<br>
-Exercise 3.8. in p.93 #1, 2<br>
-Exercise 3.9. in p.94 <br><br>
-
-<b>Homework  #8</b> 7 problems. Due Date: November 25th.<br>
-Exercise 4.1. in p.104 #1, 3, 6<br>
-Exercise 4.2. in p.110 #2, 4, 5, 6<br><br>
-
-<b>Homework  #9</b> 5 problems. Due Date: November 30th.<br>
-Exercise 4.4. in p.117 #2, 4, 6<br>
-Exercise 4.5. in p.123 #3, 5<br><br>
-
-<b>Homework  #10</b> 5 problems. Due Date: December 16th.<br>
-Exercise 5.1. in p.135 #3<br>
-Exercise 5.2. in p.139 #1<br>
-Exercise 5.3. in p.140 #1<br>
-Exercise 5.4. in p.146 #1, 4<br><br>
--->
 
 
 <h2><p>Exam Schedules</p></h2>
@@ -162,13 +116,24 @@ You may consult available monograph like <a href="https://www.amazon.com/Euclids
 Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th and make-up those 6-contact hours by an "Assignment-based Class." See the course syllabus for details. Please stay tuned for any further updates which will be posted on the course webpage.<br><br>
 
 
-<b>Update as of 2020-03-24:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period March 29th to April 4th and continue our "Assignment-based Class" to make up an additional 3 contact hours. In addition, there will be skype meetings on Thursdays March 26th and April 2nd at 16:00--17:00. Please check your email for a web link to the skype chatroom for this class.<br><br>
+<b>Update as of 2020-03-24:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period March 29th to April 4th and continue our "Assignment-based Class" to make up additional 3 contact hours. In addition, there will be skype meetings on Thursdays March 26th and April 2nd at 16:00--17:00. Please check your email for a web link to the skype chatroom for this class.<br><br>
+
+<b>Update as of 2020-03-30:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period April 5th to April 11th and continue our "Assignment-based Class" to make up additional 3 contact hours. In addition, there will be skype meetings on Tuesdays March 31st (April 2nd 16:00--17:00 meeting rescheduled) and April 7th at 16:00--17:00. Please check your email for a web link to the skype chatroom for this class.<br><br>
+
+<b>Update as of 2020-04-02:</b> The university center has decided not to meet in classroom until April 25th. Accordingly, we shall not meet during the period April 12th to April 25th and continue our "Assignment-based Class" to make up additional 6 contact hours. In addition, skype meetings will be held on Tuesdays April 14th at 16:00--17:00 and April 21st at 16:00--17:00.<br><br>
 
 <h2><p>Assignment-based Classes</p></h2>
-Week 1:  Read the main textbook from Sections 1.1 to 1.5 and complete Homework #1 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard).<br><br>
-Week 2:  Read the main textbook from Sections 1.6 to 1.9 and complete Homework #2 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard).
+Week 1:  Read the main textbook from Sections 1.1 to 1.5 and complete Homework #1 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard). Skype meeting scheduled on March 19, 16:00.
 <br><br>
-Week 3:  Read the main textbook from Sections 1.10 to 1.13 and complete Homework #3 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard).
+Week 2:  Read the main textbook from Sections 1.6 to 1.9 and complete Homework #2 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard). Skype meeting scheduled on March 26, 16:00.
+<br><br>
+Week 3:  Read the main textbook from Sections 1.10 to 1.13 and complete Homework #3 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard). Skype meeting scheduled on March 31, 19:00.
+<br><br>
+Week 4: TBA. Skype meeting scheduled on April 7, 16:00.
+<br><br>
+Week 5: TBA. Skype meeting scheduled on April 14, 16:00.
+<br><br>
+Week 6: TBA. Skype meeting scheduled on April 21, 16:00.
 <br><br>
 <!--
 
