--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -41,6 +41,10 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+
+2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
+2020-04-01: Please find an announcement below on <FONT color="#000080">remote classes using Youtube videos</FONT>.<br>
+2020-03-31: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
 2020-03-24: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
 2020-03-06: Please see from below <FONT COLOR="#C40062">Updates and make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak.</FONT><br>
 2020-03-06: Welcome!<br>
@@ -48,7 +52,8 @@
 
 <h2><p>Homework</p></h2>
 Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
-<b>Homework  #1</b> TBA
+<b>Homework  #1</b> 9 problems. Due Date: September 27th.<br>
+Problems from Chapter 1 (Part 1): #1, 9, 15, 21, 25, 26, 31, 32, 34.<br><br>
 
 
 <!--10 problems. Due Date: September 27th.<br>
@@ -135,9 +140,16 @@ In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic 
  -->
 
 <h2><p>Updates and make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</p></h2>
-Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th. For those 6 contact hours, we shall have <b>make-up classes on Tuesdays, March 31st, April 7th, 14th, 21st, 28th, and May 12th at 16:00--16:50 at E1-1 Room 136.</b> Please stay tuned for any further updates which will be posted on the course webpage.<br><br>
+Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th. <strike>For those 6 contact hours, we shall have <b>make-up classes on Tuesdays, March 31st, April 7th, 14th, 21st, 28th, and May 12th at 16:00--16:50 at E1-1 Room 136.</b></strike> Please stay tuned for any further updates which will be posted on the course webpage.<br><br>
 
-<b>Update as of 2020-03-24:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period March 29th to April 4th. We make-up those additional 3 contact hours on <b>May 19th, 26th, and June 2nd at 16:00--16:50 at E1-1 Room 136.</b> Additionally, we reschedule our March 31st make-up session on <b>June 9th at 16:00--16:50 also at E1-1 Room 136.</b><br>
+<b>Update as of 2020-03-24:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period March 29th to April 4th. <strike>We make-up those additional 3 contact hours on <b>May 19th, 26th, and June 2nd at 16:00--16:50 at E1-1 Room 136.</b> Additionally, we reschedule our March 31st make-up session on <b>June 9th at 16:00--16:50 also at E1-1 Room 136.</b></strike><br><br>
+
+
+<b>Update as of 2020-03-30:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period April 5th to April 11th. <strike>We make-up first 3 weeks (9-contact hours) by having <b>make-up classes on Tuesdays, April 14th, 21st, 28th, and May 12th, 19th, 26th, June 2nd, 9th, 16th at 16:00--16:50 at E1-1 Room 136.</b></strike> For the 3 contact hours for the fourth week, you will be provided video-recorded lectures. More details to be posted. Please stay tuned!<br><br>
+
+<b>Remote classes using Youtube videos (2020-04-01):</b> Starting the week of April 6th, we shall have remote classes using <em>video-recorded lectures</em> posted on Youtube. The <em>platform</em> will be CBNU e-Campus (Blackboard) wherein you will be able to find Youtube video links. By April 6th 17:00, you will be provided video recordings of lectures for the first 3 contact hours. You will have to write an email as instructed via email with an answer key (provided in the video) for each contact hour. Please check your email for relevant policies.<br><br>
+
+<b>Update as of 2020-04-02:</b> The university center has decided not to meet in classroom until April 25th. Accordingly, we shall not meet during the period April 12th to April 25th. Via our "Remote Classes using Youtube videos (your attendance record will be counted)," in Week 5 (April 12--18), we cover total 8 contact hours (corresponding to Week 5 all sessions, Week 1 all sessions, and Week 3 Sessions 1 and 2) and in Week 6 (April 19--25) total 7 contact hours (corresponding to Week 6 all sessions, Week 2 all sessions, and Week 3 Session 3). In addition to that, we schedule extra <b>make-up classes on April 28th, May 12th, May 19th, May 26th, June 2nd, June 9th, and June 16th at 16:00--16:50 at E1-1 Room 136</b> in order to ensure the quality of the education offered in this class.<br><br>
 
 
 <h2><p>Links</p></h2>
