--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,8 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
+2020-03-31: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-29: Please find the <FONT color="#800080">Assignment for Week 3</FONT> from below.<br>
 2020-03-24: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-24: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
@@ -81,7 +83,7 @@ Exercises in p.35 #8, 12, 13, 14, 16<br><br>
 Exercises in the lecture note pages 12, 15, 20 (Question), 23<br>
 Exercises in p.35 #17, 18, 19, 21, 22, 23, 24, 26, 27<br><br>
 
-<b>Homework  #2</b> 9 problems. Due Date: April 14th.<br>
+<b>Homework  #3</b> 9 problems. Due Date: April 14th.<br>
 Exercises in p.35 #30, 31, 32, 33, 34<br>
 Exercises in p.67 #1, 2, 3, 6<br>
 
@@ -99,15 +101,25 @@ In coming Spring 2016, I will be teaching <b>MATH250-02: Calculus with Analytic 
 <h2><p>Updates and plan for Assignment-based Class due to  new Corona Virus (COVID-19) outbreak</p></h2>
 Following the decision of the university center, the first day of class has been deferred to March 16th. Also following another decision of the university, we shall not meet during the period March 16th to 28th and make-up those 6-contact hours by an "Assignment-based Class." See the course syllabus for details. Please stay tuned for any further updates which will be posted on the course webpage.<br><br>
 
-<b>Update as of 2020-03-24:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period March 29th to April 4th and continue our "Assignment-based Class" to make up an additional 3 contact hours. In addition, there will be skype meetings on Thursdays March 26th and April 2nd at 19:00--20:00. Please check your email for a web link to the skype chatroom for this class.<br><br>
+<b>Update as of 2020-03-24:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period March 29th to April 4th and continue our "Assignment-based Class" to make up additional 3 contact hours. In addition, there will be skype meetings on Thursdays March 26th and April 2nd at 19:00--20:00. Please check your email for a web link to the skype chatroom for this class.<br><br>
+
+<b>Update as of 2020-03-30:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period April 5th to April 11th and continue our "Assignment-based Class" to make up additional 3 contact hours. In addition, there will be skype meetings on Tuesdays March 31st (April 2nd 19:00--20:00 meeting rescheduled) and April 7th at 19:00--20:00. Please check your email for a web link to the skype chatroom for this class.<br><br>
+
+<b>Update as of 2020-04-02:</b> The university center has decided not to meet in classroom until April 25th. Accordingly, we shall not meet during the period April 12th to April 25th and continue our "Assignment-based Class" to make up additional 6 contact hours. In addition, skype meetings will be held on Tuesdays April 14th at 19:00--20:00 and April 21st at 19:00--20:00.<br><br>
 
 
 <h2><p>Assignment-based Classes</p></h2>
-Week 1: Read the main textbook pages 8--18 and complete Homework #1 by the due date. Lecture notes are available on CBNU e-Campus (blackboard).
+Week 1: Read the main textbook pages 8--18 and complete Homework #1 by the due date. Lecture notes are available on CBNU e-Campus (blackboard). Skype meeting scheduled on March 19, 19:00.
 <br><br>
-Week 2: Read the main textbook pages 19--29 and complete Homework #2 by the due date. Lecture notes are available on CBNU e-Campus (blackboard).
+Week 2: Read the main textbook pages 19--29 and complete Homework #2 by the due date. Lecture notes are available on CBNU e-Campus (blackboard). Skype meeting scheduled on March 26, 19:00.
 <br><br>
-Week 3: Read the main textbook pages 30--43 and complete Homework #3 by the due date. Lecture notes are available on CBNU e-Campus (blackboard).
+Week 3: Read the main textbook pages 30--43 and complete Homework #3 by the due date. Lecture notes are available on CBNU e-Campus (blackboard). Skype meeting scheduled on March 31, 19:00.
+<br><br>
+Week 4: TBA. Skype meeting scheduled on April 7, 19:00.
+<br><br>
+Week 5: TBA. Skype meeting scheduled on April 14, 19:00.
+<br><br>
+Week 6: TBA. Skype meeting scheduled on April 21, 19:00.
 <br><br>
 
 
