--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,6 +45,7 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-04-06: Please find the <FONT color="#800080">Assignment for Week 3</FONT> from below.<br>
 2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-31: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-29: Please find the <FONT color="#800080">Assignment for Week 3</FONT> from below.<br>
@@ -78,6 +79,15 @@ Exercises in p.27 #3, 4<br>
 Exercises in p.31 #2, 3<br>
 Exercises in p.33 #2, 3<br>
 Exercises in p.34 #1, 2<br><br>
+
+
+<b>Homework  #4</b> 11 problems. Due Date: April 21th.<br>
+An exercise in the lecture note page 35.<br>
+Exercises in p.39 #2, 3<br>
+Exercises in p.42 #1, 2<br>
+Exercises in p.45 #2, 3<br>
+Exercises in p.47 #1, 2<br>
+Exercises in p.48 #1, 2<br><br>
 
 
 
