--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,7 +45,7 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
-2020-04-06: Please find the <FONT color="#800080">Assignment for Week 3</FONT> from below.<br>
+2020-04-06: Please find the <FONT color="#800080">Assignment for Week 4</FONT> from below.<br>
 2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-31: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-29: Please find the <FONT color="#800080">Assignment for Week 3</FONT> from below.<br>
@@ -132,6 +132,7 @@ Following the decision of the university center, the first day of class has been
 
 <b>Update as of 2020-04-02:</b> The university center has decided not to meet in classroom until April 25th. Accordingly, we shall not meet during the period April 12th to April 25th and continue our "Assignment-based Class" to make up additional 6 contact hours. In addition, skype meetings will be held on Tuesdays April 14th at 16:00--17:00 and April 21st at 16:00--17:00.<br><br>
 
+
 <h2><p>Assignment-based Classes</p></h2>
 Week 1:  Read the main textbook from Sections 1.1 to 1.5 and complete Homework #1 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard). Skype meeting scheduled on March 19, 16:00.
 <br><br>
@@ -139,7 +140,7 @@ Week 2:  Read the main textbook from Sections 1.6 to 1.9 and complete Homework #
 <br><br>
 Week 3:  Read the main textbook from Sections 1.10 to 1.13 and complete Homework #3 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard). Skype meeting scheduled on March 31, 19:00.
 <br><br>
-Week 4: TBA. Skype meeting scheduled on April 7, 16:00.
+Week 4: Read the main textbook from Sections 2.15 to 2.18 and complete Homework #4 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard). Skype meeting scheduled on April 7, 16:00.
 <br><br>
 Week 5: TBA. Skype meeting scheduled on April 14, 16:00.
 <br><br>
