--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,7 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-04-07: Please find the <FONT color="#800080">Assignment for Week 4</FONT> from below.<br>
 2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-31: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-29: Please find the <FONT color="#800080">Assignment for Week 3</FONT> from below.<br>
@@ -85,10 +86,12 @@ Exercises in p.35 #17, 18, 19, 21, 22, 23, 24, 26, 27<br><br>
 
 <b>Homework  #3</b> 9 problems. Due Date: April 14th.<br>
 Exercises in p.35 #30, 31, 32, 33, 34<br>
-Exercises in p.67 #1, 2, 3, 6<br>
+Exercises in p.67 #1, 2, 3, 6<br><br>
 
+<b>Homework  #4</b> 10 problems. Due Date: April 21st.<br>
+Exercises in p.67 #8, 9, 10, 11, 12, 13, 16, 17, 18, 21<br><br>
 
-<br><br>
+<br>
 
 
 <!--
@@ -115,7 +118,7 @@ Week 2: Read the main textbook pages 19--29 and complete Homework #2 by the due 
 <br><br>
 Week 3: Read the main textbook pages 30--43 and complete Homework #3 by the due date. Lecture notes are available on CBNU e-Campus (blackboard). Skype meeting scheduled on March 31, 19:00.
 <br><br>
-Week 4: TBA. Skype meeting scheduled on April 7, 19:00.
+Week 4: Read the main textbook pages 43--52 and complete Homework #4 by the due date. Lecture notes are available on CBNU e-Campus (blackboard).  Skype meeting scheduled on April 7, 19:00.
 <br><br>
 Week 5: TBA. Skype meeting scheduled on April 14, 19:00.
 <br><br>
