--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -41,7 +41,10 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
-
+2020-04-09: Youtube videos Sessions 4 to 11 are now available. Find links for video recordings from CBNU eCampus.<br>
+2020-04-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.
+2020-04-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.
+2020-04-06: Youtube videos Sessions 1 to 3 are now available. Find links for video recordings from CBNU eCampus.<br>
 2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
 2020-04-01: Please find an announcement below on <FONT color="#000080">remote classes using Youtube videos</FONT>.<br>
 2020-03-31: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
@@ -52,8 +55,11 @@
 
 <h2><p>Homework</p></h2>
 Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
-<b>Homework  #1</b> 9 problems. Due Date: September 27th.<br>
-Problems from Chapter 1 (Part 1): #1, 9, 15, 21, 25, 26, 31, 32, 34.<br><br>
+<b>Homework  #1</b> 9 problems. Due Date: April 23rd.<br>
+Problems from Chapter 3 (Part 1): #1, 9, 15, 21, 25, 26, 31, 32, 34.<br><br>
+
+<b>Homework  #2</b> 9 problems. Due Date: April 28th.<br>
+Problems from Chapter 3 (Part 1): #1, 9, 15, 21, 25, 26, 31, 32, 34.<br><br>
 
 
 <!--10 problems. Due Date: September 27th.<br>
