--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,7 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-04-09: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-04-07: Please find the <FONT color="#800080">Assignment for Week 4</FONT> from below.<br>
 2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-31: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
@@ -110,6 +111,8 @@ Following the decision of the university center, the first day of class has been
 
 <b>Update as of 2020-04-02:</b> The university center has decided not to meet in classroom until April 25th. Accordingly, we shall not meet during the period April 12th to April 25th and continue our "Assignment-based Class" to make up additional 6 contact hours. In addition, skype meetings will be held on Tuesdays April 14th at 19:00--20:00 and April 21st at 19:00--20:00.<br><br>
 
+<b>Update as of 2020-04-09:</b> Following the unanimous opinion, we will meet in class starting April 14th at 19:00. Please note that you must wash your hands upon entering the building E1-1 and wear a KF-94 or KF-80 mask in all times.<br><br>
+
 
 <h2><p>Assignment-based Classes</p></h2>
 Week 1: Read the main textbook pages 8--18 and complete Homework #1 by the due date. Lecture notes are available on CBNU e-Campus (blackboard). Skype meeting scheduled on March 19, 19:00.
@@ -120,9 +123,9 @@ Week 3: Read the main textbook pages 30--43 and complete Homework #3 by the due 
 <br><br>
 Week 4: Read the main textbook pages 43--52 and complete Homework #4 by the due date. Lecture notes are available on CBNU e-Campus (blackboard).  Skype meeting scheduled on April 7, 19:00.
 <br><br>
-Week 5: TBA. Skype meeting scheduled on April 14, 19:00.
+Week 5: Meeting in-class.
 <br><br>
-Week 6: TBA. Skype meeting scheduled on April 21, 19:00.
+Week 6: Meeting in-class.
 <br><br>
 
 
