--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,8 +45,11 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-04-10: Please find the <FONT color="#800080">Assignment for Week 5</FONT> from below.<br>
+2020-04-09: The recorded video from this week's skype meeting is available on CBNU eCampus.<br>
 2020-04-06: Please find the <FONT color="#800080">Assignment for Week 4</FONT> from below.<br>
 2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
+2020-03-31: Recorded videos from today's and March 19th skype meetings are available on CBNU eCampus.<br>
 2020-03-31: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-03-29: Please find the <FONT color="#800080">Assignment for Week 3</FONT> from below.<br>
 2020-03-24: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
@@ -81,13 +84,22 @@ Exercises in p.33 #2, 3<br>
 Exercises in p.34 #1, 2<br><br>
 
 
-<b>Homework  #4</b> 11 problems. Due Date: April 21th.<br>
+<b>Homework  #4</b> 11 problems. Due Date: April 21st.<br>
 An exercise in the lecture note page 35.<br>
 Exercises in p.39 #2, 3<br>
 Exercises in p.42 #1, 2<br>
 Exercises in p.45 #2, 3<br>
 Exercises in p.47 #1, 2<br>
 Exercises in p.48 #1, 2<br><br>
+
+<b>Homework  #5</b> 12 problems. Due Date: April 28th.<br>
+An exercise in the lecture note page 40.<br>
+An exercise in the lecture note page 41.<br>
+Exercises in p.50 #2, 3<br>
+Exercises in p.52 #1, 2<br>
+Exercises in p.53 #1, 2<br>
+Exercises in p.57 #1, 3<br>
+Exercises in p.59 #2, 3<br><br>
 
 
 
@@ -142,7 +154,7 @@ Week 3:  Read the main textbook from Sections 1.10 to 1.13 and complete Homework
 <br><br>
 Week 4: Read the main textbook from Sections 2.15 to 2.18 and complete Homework #4 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard). Skype meeting scheduled on April 7, 16:00.
 <br><br>
-Week 5: TBA. Skype meeting scheduled on April 14, 16:00.
+Week 5: Read the main textbook from Sections 2.19 to 2.22 and complete Homework #5 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard). Skype meeting scheduled on April 14, 16:00.
 <br><br>
 Week 6: TBA. Skype meeting scheduled on April 21, 16:00.
 <br><br>
