--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -58,8 +58,9 @@ Unless otherwise stated, problem numbers below refer to Solved Problems and Supp
 <b>Homework  #1</b> 9 problems. Due Date: April 23rd.<br>
 Problems from Chapter 3 (Part 1): #1, 9, 15, 21, 25, 26, 31, 32, 34.<br><br>
 
-<b>Homework  #2</b> 9 problems. Due Date: April 28th.<br>
-Problems from Chapter 3 (Part 1): #1, 9, 15, 21, 25, 26, 31, 32, 34.<br><br>
+<b>Homework  #2</b> 10 problems. Due Date: April 28th.<br>
+Problems from Chapter 3 (Part 2): #17, 18<br>
+Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
 
 
 <!--10 problems. Due Date: September 27th.<br>
