--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -42,8 +42,9 @@
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
 2020-04-09: Youtube videos Sessions 4 to 11 are now available. Find links for video recordings from CBNU eCampus.<br>
-2020-04-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.
-2020-04-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.
+2020-04-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
+2020-04-09: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
+2020-04-09: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2020-04-06: Youtube videos Sessions 1 to 3 are now available. Find links for video recordings from CBNU eCampus.<br>
 2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
 2020-04-01: Please find an announcement below on <FONT color="#000080">remote classes using Youtube videos</FONT>.<br>
