--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -41,6 +41,8 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+2020-04-16: Youtube videos Sessions 12 to 18 are now available. Find links for video recordings from CBNU eCampus.<br>
+2020-04-13: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-04-09: Youtube videos Sessions 4 to 11 are now available. Find links for video recordings from CBNU eCampus.<br>
 2020-04-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2020-04-09: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
@@ -62,6 +64,23 @@ Problems from Chapter 3 (Part 1): #1, 9, 15, 21, 25, 26, 31, 32, 34.<br><br>
 <b>Homework  #2</b> 10 problems. Due Date: April 28th.<br>
 Problems from Chapter 3 (Part 2): #17, 18<br>
 Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
+
+<b>Homework  #3</b> 10 problems. Due Date: May 7th.<br>
+Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br>
+
+<!-- Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br><br> -->
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <!--10 problems. Due Date: September 27th.<br>
