--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,6 +45,7 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-04-20: Please find the <FONT color="#800080">Assignment for Week 6</FONT> from below.<br>
 2020-04-10: Please find the <FONT color="#800080">Assignment for Week 5</FONT> from below.<br>
 2020-04-09: The recorded video from this week's skype meeting is available on CBNU eCampus.<br>
 2020-04-06: Please find the <FONT color="#800080">Assignment for Week 4</FONT> from below.<br>
@@ -102,6 +103,15 @@ Exercises in p.57 #1, 3<br>
 Exercises in p.59 #2, 3<br><br>
 
 
+<b>Homework  #6</b> 16 problems. Due Date: May 5th.<br>
+Exercises in p.62 #1, 2<br>
+Exercises in p.63 #1, 2<br>
+Exercises in p.64 #1, 2, 3<br>
+Exercises in p.66 #2, 3<br>
+Exercises in p.68 #1, 2<br>
+Exercises in p.69 #1, 2<br>
+Exercises in p.72--73 Questions 1, 2, 3.<br><br>
+
 
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: TBA <br> <!-- <FONT COLOR="#C40062">28 October (Monday),</FONT> In-class.<br>
@@ -156,7 +166,7 @@ Week 4: Read the main textbook from Sections 2.15 to 2.18 and complete Homework 
 <br><br>
 Week 5: Read the main textbook from Sections 2.19 to 2.22 and complete Homework #5 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard). Skype meeting scheduled on April 14, 16:00.
 <br><br>
-Week 6: TBA. Skype meeting scheduled on April 21, 16:00.
+Week 6: Read the main textbook from Sections 2.23 to 2.26 and complete Homework #6 above by the due date. Lecture notes and reading materials are available on CBNU e-Campus (blackboard). Skype meeting scheduled on April 21, 16:00.
 <br><br>
 <!--
 
