--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,6 +45,9 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-04-22: Please find an announcement below on <FONT color="#000080">remote classes using Youtube videos</FONT>.<br>
+2020-04-22: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
+2020-04-22: The recorded videos from this and the previous weeks' skype meetings are available on CBNU eCampus.<br>
 2020-04-20: Please find the <FONT color="#800080">Assignment for Week 6</FONT> from below.<br>
 2020-04-10: Please find the <FONT color="#800080">Assignment for Week 5</FONT> from below.<br>
 2020-04-09: The recorded video from this week's skype meeting is available on CBNU eCampus.<br>
@@ -153,6 +156,10 @@ Following the decision of the university center, the first day of class has been
 <b>Update as of 2020-03-30:</b> The university center has decided not to meet in classroom for an extra week. Accordingly, we shall not meet during the period April 5th to April 11th and continue our "Assignment-based Class" to make up additional 3 contact hours. In addition, there will be skype meetings on Tuesdays March 31st (April 2nd 16:00--17:00 meeting rescheduled) and April 7th at 16:00--17:00. Please check your email for a web link to the skype chatroom for this class.<br><br>
 
 <b>Update as of 2020-04-02:</b> The university center has decided not to meet in classroom until April 25th. Accordingly, we shall not meet during the period April 12th to April 25th and continue our "Assignment-based Class" to make up additional 6 contact hours. In addition, skype meetings will be held on Tuesdays April 14th at 16:00--17:00 and April 21st at 16:00--17:00.<br><br>
+
+<b>Update as of 2020-04-20:</b> The university center has decided not to meet in classroom until the end of the semester. Accordingly, we shall not meet in classroom until the end of the semester. Following the result of the poll, from the week of April 27th, you will be provided links to Youtube videos. Please do not forget that the class runs as "Assignment-based Classes"' until April 26th. So you have to hand-in your Homework 1 to Homework 6 in order to claim your attendance for respective weeks. Those who have been holding onto their homework until the first in-class lecture must submit their homework either electronically or by a registered mail. Please find more details from an email that has been sent out. Following the decision of the university, the midterm exam has been cancelled and you will get the score 100% for your midterm exam.<br><br>
+
+<b>Remote classes using Youtube videos (2020-04-22):</b> Starting the week of April 27th, we shall have remote classes using <em>video-recorded lectures</em> posted on Youtube. The <em>platform</em> will be CBNU e-Campus (Blackboard) wherein you will be able to find Youtube video links. By April 27th 15:00, you will be provided video recordings of lectures for the first 3 contact hours. You will have to write an email as instructed via email with an answer key (provided in the video) for each contact hour. Please check your email for relevant policies.<br><br>
 
 
 <h2><p>Assignment-based Classes</p></h2>
