--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -41,6 +41,7 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+2020-04-20: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
 2020-04-16: Youtube videos Sessions 12 to 18 are now available. Find links for video recordings from CBNU eCampus.<br>
 2020-04-13: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2020-04-09: Youtube videos Sessions 4 to 11 are now available. Find links for video recordings from CBNU eCampus.<br>
@@ -178,6 +179,7 @@ Following the decision of the university center, the first day of class has been
 
 <b>Update as of 2020-04-02:</b> The university center has decided not to meet in classroom until April 25th. Accordingly, we shall not meet during the period April 12th to April 25th. Via our "Remote Classes using Youtube videos (your attendance record will be counted)," in Week 5 (April 12--18), we cover total 8 contact hours (corresponding to Week 5 all sessions, Week 1 all sessions, and Week 3 Sessions 1 and 2) and in Week 6 (April 19--25) total 7 contact hours (corresponding to Week 6 all sessions, Week 2 all sessions, and Week 3 Session 3). In addition to that, we schedule extra <b>make-up classes on April 28th, May 12th, May 19th, May 26th, June 2nd, June 9th, and June 16th at 16:00--16:50 at E1-1 Room 136</b> in order to ensure the quality of the education offered in this class.<br><br>
 
+<b>Update as of 2020-04-20:</b> The university center has decided not to meet in classroom until the end of the semester. Accordingly, we shall not meet in classroom until the end of the semester. We shall replace those plans for in-class lectures by Youtube video lectures. Following the decision of the university, the midterm exam has been cancelled and you will get the score 100% for your midterm exam.<br><br>
 
 <h2><p>Links</p></h2>
 <a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
