--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -41,6 +41,9 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+2020-04-27: Youtube videos Sessions 19 to 22 are now available. Find links for video recordings from CBNU eCampus.<br>
+2020-04-25: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
+2020-04-20: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> has been cancelled.<br>
 2020-04-20: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
 2020-04-16: Youtube videos Sessions 12 to 18 are now available. Find links for video recordings from CBNU eCampus.<br>
 2020-04-13: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
@@ -69,7 +72,10 @@ Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
 <b>Homework  #3</b> 10 problems. Due Date: May 7th.<br>
 Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br>
 
-<!-- Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br><br> -->
+<b>Homework  #4</b> 10 problems. Due Date: May 14th.<br>
+Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>
+Problems from Chapter 5 (Part 1): #5, 7, 8, 25, 28<br><br>
+<!-- <br> -->
 
 
 
@@ -122,7 +128,7 @@ Here are problems from Chapter 10: <a href="f2019_dg2/ch10prob.pdf" title="Chapt
 
 
 <h2><p>Exam Schedules</p></h2>
-Midterm Exam: TBA
+Midterm Exam: Cancelled.
 <!--
 <FONT COLOR="#C40062">22 October (Tuesday),</FONT> In-class.<br>
 - Coverage: Chapters 8 and 9. Subsections on Rodrigues' formula, Asymptotic lines are not included.<br>
