--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,6 +45,8 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-04-27: Youtube videos Sessions 7-1, 7-2, 7-3 available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
+2020-04-26: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
 2020-04-22: Please find an announcement below on <FONT color="#000080">remote classes using Youtube videos</FONT>.<br>
 2020-04-22: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
 2020-04-22: The recorded videos from this and the previous weeks' skype meetings are available on CBNU eCampus.<br>
@@ -115,9 +117,15 @@ Exercises in p.68 #1, 2<br>
 Exercises in p.69 #1, 2<br>
 Exercises in p.72--73 Questions 1, 2, 3.<br><br>
 
+<b>Homework  #7</b> 9 problems. Due Date: May 12th.<br>
+Exercises in p.81 #3<br>
+Exercises in p.82 #2, 3<br>
+Exercises in p.83 #1, 3<br>
+Exercises in p.85 #1, 2<br>
+Exercises in p.88 #1, 3<br>
 
 <h2><p>Exam Schedules</p></h2>
-Midterm Exam: TBA <br> <!-- <FONT COLOR="#C40062">28 October (Monday),</FONT> In-class.<br>
+Midterm Exam: Cancelled. <br> <!-- <FONT COLOR="#C40062">28 October (Monday),</FONT> In-class.<br>
 - Coverage: Chapters 1, 2, and 3.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.), 3 questions which are identical or directly related to homework problems, and remaining 4 questions are from those discussed in class. This exam would gear toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - We still meet on 29 October (Tuesday) as scheduled for a regular class meeting.<br>
