--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,6 +45,8 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-05-04: Youtube videos Sessions 8-1, 8-2, 8-3 available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
+2020-05-04: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
 2020-04-27: Youtube videos Sessions 7-1, 7-2, 7-3 available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
 2020-04-26: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
 2020-04-22: Please find an announcement below on <FONT color="#000080">remote classes using Youtube videos</FONT>.<br>
@@ -122,7 +124,19 @@ Exercises in p.81 #3<br>
 Exercises in p.82 #2, 3<br>
 Exercises in p.83 #1, 3<br>
 Exercises in p.85 #1, 2<br>
-Exercises in p.88 #1, 3<br>
+Exercises in p.88 #1, 3<br><br>
+
+<b>Homework  #8</b> 14 problems. Due Date: May 19th.<br>
+Exercises in p.92 #1, 2, 3<br>
+Exercises in p.93 #1, 2, 3<br>
+Exercises in p.97 #2, 3, 4<br>
+Exercises in p.97 (bottom) #1, 2, 3<br>
+Exercises in p.100 #2, 3<br><br>
+
+<!-- 
+<b>Homework  #9</b> 9 problems. Due Date: May 26th.<br>
+Exercises in p.102 #1<br>
+Exercises in p.103 #1, 2<br> -->
 
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: Cancelled. <br> <!-- <FONT COLOR="#C40062">28 October (Monday),</FONT> In-class.<br>
