--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -41,6 +41,7 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+2020-05-04: Youtube videos Sessions 23, 24, 25 are available today at 17:00. (Homework problems will be posted later today or tomorrow.) Find links for video recordings from CBNU eCampus.<br>
 2020-04-27: Youtube videos Sessions 19 to 22 are now available. Find links for video recordings from CBNU eCampus.<br>
 2020-04-25: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2020-04-20: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> has been cancelled.<br>
