--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -41,6 +41,7 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+2020-05-04: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2020-05-04: Youtube videos Sessions 23, 24, 25 are available today at 17:00. (Homework problems will be posted later today or tomorrow.) Find links for video recordings from CBNU eCampus.<br>
 2020-04-27: Youtube videos Sessions 19 to 22 are now available. Find links for video recordings from CBNU eCampus.<br>
 2020-04-25: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
@@ -76,7 +77,13 @@ Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br
 <b>Homework  #4</b> 10 problems. Due Date: May 14th.<br>
 Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>
 Problems from Chapter 5 (Part 1): #5, 7, 8, 25, 28<br><br>
-<!-- <br> -->
+
+<b>Homework  #5</b>  8 problems. Due Date: May 21th.<br>
+Problems from Chapter 5 (Part 2): #14, 15, 16, 35<br>
+Problems from the National Exam: <a href="s2020_dg1/hw5.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+<!-- HW6 22 23 24 33<br> -->
+
+
 
 
 
