--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -45,6 +45,8 @@
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2020-05-11: Youtube videos Sessions 9-1, 9-2, 9-3 available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
+2020-05-11: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>
 2020-05-04: Youtube videos Sessions 8-1, 8-2, 8-3 available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
 2020-05-04: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
 2020-04-27: Youtube videos Sessions 7-1, 7-2, 7-3 available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
@@ -133,10 +135,19 @@ Exercises in p.97 #2, 3, 4<br>
 Exercises in p.97 (bottom) #1, 2, 3<br>
 Exercises in p.100 #2, 3<br><br>
 
-<!-- 
-<b>Homework  #9</b> 9 problems. Due Date: May 26th.<br>
+<b>Homework  #9</b> 7 problems. Due Date: May 26th.<br>
 Exercises in p.102 #1<br>
-Exercises in p.103 #1, 2<br> -->
+Exercises in p.103 #1, 2<br>
+Exercises in p.108 #1, 2, 3, 4<br><br>
+
+<!--
+<b>Homework  #10</b> 8 problems. Due Date: June 2nd.<br>
+Exercises in p.113 #1, 2, 3, 4<br>
+Exercises in p.116 #1, 2, 3, 4<br><br>
+
+-->
+
+
 
 <h2><p>Exam Schedules</p></h2>
 Midterm Exam: Cancelled. <br> <!-- <FONT COLOR="#C40062">28 October (Monday),</FONT> In-class.<br>
