--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,8 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-05-12: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
+2020-05-12: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2020-04-09: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
 2020-04-07: Please find the <FONT color="#800080">Assignment for Week 4</FONT> from below.<br>
 2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
@@ -92,7 +94,11 @@ Exercises in p.67 #1, 2, 3, 6<br><br>
 <b>Homework  #4</b> 10 problems. Due Date: April 21st.<br>
 Exercises in p.67 #8, 9, 10, 11, 12, 13, 16, 17, 18, 21<br><br>
 
-<br>
+<b>Homework  #5</b> 8 problems. Due Date: May 26th.<br>
+Exercises in p.67 #22, 24, 26, 27, 28, 30, 36, 37<br><br>
+
+<b>Homework  #6</b> 6 problems. Due Date: June 2nd.<br>
+Exercises in p.82 #2, 3, 4, 5, 6, 8<br><br>
 
 
 <!--
