--- a/teaching/s2020_dg1.html
+++ b/teaching/s2020_dg1.html
@@ -41,8 +41,10 @@
 2019-09-18: Announcement -- Student groups for group presentation, <a href="f2019_dg2/groups.pdf" title="Student groups">PDF</a>. Be sure to check your email inbox.<br>
 2019-09-14: <FONT COLOR="red">Homework #1</FONT> has been posted below. An addendum there is to help your understanding. Be sure to read and understand.<br>
 -->
+2020-05-14: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
+2020-05-14: Youtube videos Sessions 30, 31, 32, 33 will be available on May 17th 23:59. Find links for video recordings from CBNU eCampus.<br>
+2020-05-14: Youtube videos Sessions 26, 27, 28, 29 are available now. Find links for video recordings from CBNU eCampus. Please send attendace emails by May 21st 15:00 (Late emails accepted with no disadvantage).<br>
 2020-05-11: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
-2020-05-11: Youtube videos Sessions 26, 27, 28, 29 are available today at 17:00. Find links for video recordings from CBNU eCampus.<br>
 2020-05-04: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2020-05-04: Youtube videos Sessions 23, 24, 25 are available today at 17:00. (Homework problems will be posted later today or tomorrow.) Find links for video recordings from CBNU eCampus.<br>
 2020-04-27: Youtube videos Sessions 19 to 22 are now available. Find links for video recordings from CBNU eCampus.<br>
@@ -87,6 +89,10 @@ Problems from the National Exam: <a href="s2020_dg1/hw5.pdf" title="Selected pro
 <b>Homework  #6</b>  7 problems. Due Date: May 21th.<br>
 Problems from Chapter 5 (Part 3): #22, 23, 24, 33<br>
 Problems from the National Exam: <a href="s2020_dg1/hw6.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+
+<b>Homework  #7</b>  11 problems. Due Date: May 28th.<br>
+Problems from Chapter 7 (Part 1): #2, 3, 4, 8, 15<br>
+Problems from the National Exam: <a href="s2020_dg1/hw7.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 <!-- HW6 <br> -->
 
 
