--- a/teaching/s2020_geom1.html
+++ b/teaching/s2020_geom1.html
@@ -44,12 +44,26 @@
 2019-09-18: Announcement -- Student groups for group presentation. <a href="f2019_geom2/groups.pdf" title="Student groups">PDF</a> Be sure to check your email inbox.<br>
 2019-09-14: Check out <FONT COLOR="red">Homework #2</FONT> below.<br>
 2019-09-08: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
+
+
+
+
+
+2020-05-25: Youtube videos Sessions 11-1, 11-2, 11-3 will be available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
+2020-05-25: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br>
 -->
-2020-05-11: Youtube videos Sessions 9-1, 9-2, 9-3 available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
+
+
+
+
+
+2020-05-18: Youtube videos Sessions 10-1, 10-2, 10-3 will be  available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
+2020-05-18: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>
+2020-05-11: Youtube videos Sessions 9-1, 9-2, 9-3 will be  available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
 2020-05-11: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>
-2020-05-04: Youtube videos Sessions 8-1, 8-2, 8-3 available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
+2020-05-04: Youtube videos Sessions 8-1, 8-2, 8-3 will be  available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
 2020-05-04: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
-2020-04-27: Youtube videos Sessions 7-1, 7-2, 7-3 available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
+2020-04-27: Youtube videos Sessions 7-1, 7-2, 7-3 will be available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
 2020-04-26: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
 2020-04-22: Please find an announcement below on <FONT color="#000080">remote classes using Youtube videos</FONT>.<br>
 2020-04-22: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
@@ -140,11 +154,15 @@ Exercises in p.102 #1<br>
 Exercises in p.103 #1, 2<br>
 Exercises in p.108 #1, 2, 3, 4<br><br>
 
-<!--
 <b>Homework  #10</b> 8 problems. Due Date: June 2nd.<br>
 Exercises in p.113 #1, 2, 3, 4<br>
 Exercises in p.116 #1, 2, 3, 4<br><br>
 
+<!-- confirmed below
+<b>Homework  #11</b> 10 problems. Due Date: June 9nd.<br>
+Exercises in p.123 #1, 2, 3<br>
+Exercises in p.128 #1, 2, 3<br>
+Exercises in p.129 #1, 2, 3, 4<br><br>
 -->
 
 
