--- a/teaching/s2020_fom1.html
+++ b/teaching/s2020_fom1.html
@@ -59,6 +59,8 @@
 2016-01-27: There will be a student ambassador from the Dolciani Mathematics Learning Center sometime in the beginning of the semester, and introduce about the center for about five minutes. Please welcome him/her and have interest.<br>
 2016-01-27: Check out <FONT COLOR="red">Homework #1</FONT> below.<br>
 -->
+2020-05-19: For this week's lectures you will be provided recorded videos posted on Youtube. The <em>platform</em> will be CBNU e-Campus (Blackboard) wherein you will be able to find Youtube video links. By Today 19:00, you will be provided video recordings of lectures for the first 3 contact hours. You will have to write an email as instructed via email with an answer key (provided in the video) for each contact hour. Please check your email for relevant policies.<br>
+2020-05-18: Due to concerns of Corona virus in Cheongju City, we will go remote this week. Please check your email as well as further updates.<br>
 2020-05-12: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
 2020-05-12: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
 2020-04-09: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
